--- a/app/src/main/res/drawable/rect_stroke_transpaent.xml
+++ b/app/src/main/res/drawable/rect_stroke_transpaent.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="0.5dp"
-        android:color="@color/gray"/>
+        android:color="@color/line_gray"/>
     <corners
         android:radius="5dp"/>
 </shape>
