--- a/app/src/main/res/layout/activity_file_detail_online.xml
+++ b/app/src/main/res/layout/activity_file_detail_online.xml
@@ -12,7 +12,9 @@
     <com.sunny.youyun.views.easy_refresh.EasyRefreshLayout
         android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        >
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView_comment"
@@ -22,6 +24,10 @@
 
         </android.support.v7.widget.RecyclerView>
     </com.sunny.youyun.views.easy_refresh.EasyRefreshLayout>
+
+    <include layout="@layout/divide_item"/>
+
+    <include layout="@layout/comment_view"/>
     <!--<android.support.constraint.ConstraintLayout-->
     <!--android:id="@+id/cl_user_info"-->
     <!--android:layout_width="match_parent"-->
