--- a/app/src/main/res/layout/finding_item.xml
+++ b/app/src/main/res/layout/finding_item.xml
@@ -94,55 +94,53 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginEnd="34dp"
             android:layout_marginTop="16dp"
             android:drawablePadding="8dp"
             android:gravity="center_vertical"
             android:text="100"
             android:textColor="@color/text_gray_light"
-            app:drawable_height="@dimen/finding_item_icon_size"
-            app:drawable_width="@dimen/finding_item_icon_size"
-            app:drawable_src="@drawable/icon_view"
             android:textSize="11sp"
+            app:drawable_height="@dimen/finding_item_icon_size"
+            app:drawable_src="@drawable/icon_view"
+            app:drawable_width="@dimen/finding_item_icon_size"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/img_icon" />
+            app:layout_constraintEnd_toStartOf="@+id/rt_like_count"
+            app:layout_constraintTop_toBottomOf="@+id/img_icon"
+            android:layout_marginRight="34dp" />
 
         <com.sunny.youyun.views.RichText
             android:id="@+id/rt_like_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="34dp"
-            android:layout_marginLeft="34dp"
+            android:layout_marginEnd="34dp"
             android:drawablePadding="8dp"
             android:gravity="center_vertical"
             android:text="100"
-            android:textSize="11sp"
             android:textColor="@color/text_gray_light"
+            android:textSize="11sp"
             app:drawable_height="@dimen/finding_item_icon_size"
             app:drawable_src="@drawable/icon_zan"
             app:drawable_width="@dimen/finding_item_icon_size"
-            app:layout_constraintStart_toEndOf="@+id/rt_view_count"
+            app:layout_constraintEnd_toStartOf="@+id/rt_down_count"
             app:layout_constraintTop_toTopOf="@+id/rt_view_count"
-             />
+            android:layout_marginRight="34dp" />
 
         <com.sunny.youyun.views.RichText
             android:id="@+id/rt_down_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
             android:drawablePadding="8dp"
-            android:layout_marginStart="34dp"
-            android:layout_marginLeft="34dp"
             android:gravity="center_vertical"
             android:text="100"
-            android:textSize="11sp"
             android:textColor="@color/text_gray_light"
+            android:textSize="11sp"
             app:drawable_height="@dimen/finding_item_icon_size"
             app:drawable_src="@drawable/icon_download_num"
             app:drawable_width="@dimen/finding_item_icon_size"
-            app:layout_constraintStart_toEndOf="@+id/rt_like_count"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/rt_like_count"
-            />
+            android:layout_marginRight="16dp" />
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
