--- a/app/src/main/res/layout/activity_person_info.xml
+++ b/app/src/main/res/layout/activity_person_info.xml
@@ -46,10 +46,10 @@
                     android:id="@+id/img_avatar"
                     android:layout_width="74dp"
                     android:layout_height="74dp"
-                    android:padding="2dp"
-                    android:background="@drawable/avatar_circle_bg"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="12dp"
+                    android:background="@drawable/avatar_circle_bg"
+                    android:padding="2dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -73,8 +73,8 @@
                 <ImageView
                     android:layout_width="12dp"
                     android:layout_height="12dp"
-                    android:layout_marginStart="16dp"
                     android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp"
                     android:src="@drawable/icon_mine_info_edit"
                     app:layout_constraintBottom_toTopOf="@id/tv_nickname"
                     app:layout_constraintStart_toEndOf="@id/tv_nickname"
@@ -110,6 +110,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp"
                     android:text="粉丝  0"
                     android:textColor="@color/white"
                     android:textSize="11sp"
@@ -117,8 +118,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0"
                     app:layout_constraintStart_toEndOf="@id/divide_line"
-                    app:layout_constraintTop_toBottomOf="@id/divide_line"
-                    android:layout_marginStart="16dp" />
+                    app:layout_constraintTop_toBottomOf="@id/divide_line" />
 
                 <TextView
                     android:id="@+id/tv_signature"
@@ -135,7 +135,20 @@
             </android.support.constraint.ConstraintLayout>
         </android.support.design.widget.CollapsingToolbarLayout>
 
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:background="@color/white"
+            app:tabIndicatorColor="@color/application_theme_color"
+            app:tabIndicatorHeight="3dp"
+            app:tabMode="scrollable"
+            app:tabSelectedTextColor="@color/application_theme_color"
+            app:tabTextColor="@color/text_gray">
 
+        </android.support.design.widget.TabLayout>
+
+        <include layout="@layout/divide_item" />
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.NestedScrollView
@@ -145,38 +158,13 @@
         android:fillViewport="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <LinearLayout
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:descendantFocusability="blocksDescendants"
-            android:orientation="vertical">
-
-            <android.support.design.widget.TabLayout
-                android:id="@+id/tabLayout"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:background="@color/white"
-                app:tabIndicatorColor="@color/application_theme_color"
-                app:tabIndicatorHeight="3dp"
-                app:tabMode="scrollable"
-                app:tabSelectedTextColor="@color/application_theme_color"
-                app:tabTextColor="@color/text_gray">
-
-            </android.support.design.widget.TabLayout>
-
-            <include layout="@layout/divide_item"/>
-
-            <android.support.v4.view.ViewPager
-                android:id="@+id/viewpager"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white" />
-
-        </LinearLayout>
-
+            android:background="@color/white" />
 
     </android.support.v4.widget.NestedScrollView>
-
 
 
 </android.support.design.widget.CoordinatorLayout>
