--- a/app/src/main/res/layout/person_info_concern_item.xml
+++ b/app/src/main/res/layout/person_info_concern_item.xml
@@ -2,7 +2,6 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -40,19 +39,21 @@
 
     <TextView
         android:id="@+id/tv_description"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
         android:ellipsize="end"
-        android:lines="2"
-        android:text="简介：普天之下，莫非王土，率土之滨，莫非王臣
-普天之下，莫非王土，率土之滨，莫非王臣
-普天之下，莫非王土，率土之滨，莫非王臣
-普天之下，莫非王土，率土之滨，莫非王臣"
+        android:maxLines="2"
+        android:textSize="14sp"
+        android:text="简介：普天之下"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/tv_nickname"
-        app:layout_constraintTop_toBottomOf="@+id/tv_nickname" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_nickname"
+        android:layout_marginRight="8dp" />
 
 
 </android.support.constraint.ConstraintLayout>
