--- a/app/src/main/res/layout-v21/activity_person_info.xml
+++ b/app/src/main/res/layout-v21/activity_person_info.xml
@@ -72,6 +72,7 @@
                     app:layout_constraintTop_toBottomOf="@id/img_avatar" />
 
                 <ImageView
+                    android:id="@+id/img_edit"
                     android:layout_width="12dp"
                     android:layout_height="12dp"
                     android:layout_marginStart="16dp"
