--- a/app/src/main/res/layout/activity_person_info.xml
+++ b/app/src/main/res/layout/activity_person_info.xml
@@ -71,6 +71,7 @@
                     app:layout_constraintTop_toBottomOf="@id/img_avatar" />
 
                 <ImageView
+                    android:id="@+id/img_edit"
                     android:layout_width="12dp"
                     android:layout_height="12dp"
                     android:layout_marginLeft="16dp"
