--- a/app/src/main/res/layout/activity_person_setting.xml
+++ b/app/src/main/res/layout/activity_person_setting.xml
@@ -1,86 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<com.sunny.youyun.views.wheelview.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="@color/light_gray"
-    android:fitsSystemWindows="true"
-    tools:context="com.sunny.youyun.activity.person_setting.PersonSettingActivity">
+    android:layout_height="match_parent">
 
-    <include layout="@layout/bar_item"/>
-
-    <TextView
-        android:textSize="12sp"
-        android:textColor="@color/text_gray_light"
-        android:layout_marginTop="10dp"
-        android:padding="5dp"
-        android:layout_marginLeft="5dp"
-        android:text="@string/person_setting"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp" />
-    <include layout="@layout/divide_item"/>
-
-    <com.sunny.youyun.views.LineMenuItem
-        android:id="@+id/li_change_avatar"
-        app:right_resource="@drawable/avatar_circle_bg"
-        app:is_right_icon_visible="true"
-        app:right_icon_size="30dp"
-        app:menu_title="@string/change_avatar"
-        app:menu_title_size="14sp"
-        app:menu_title_color="@color/text_gray"
-        android:background="@color/white"
-        app:left_margin="@dimen/mine_item_margin_left"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/mine_item_height">
-
-    </com.sunny.youyun.views.LineMenuItem>
-    <include layout="@layout/divide_item"/>
-    <com.sunny.youyun.views.LineMenuItem
-        android:id="@+id/li_change_nickname"
-        android:layout_width="match_parent"
-        android:background="@color/white"
-        android:layout_height="@dimen/mine_item_height"
-        app:menu_title="@string/change_nickname"
-        app:menu_title_size="14sp"
-        app:menu_title_color="@color/text_gray"
-        app:menu_value="GaoSQ"
-        app:left_margin="@dimen/mine_item_margin_left">
-    </com.sunny.youyun.views.LineMenuItem>
-    <include layout="@layout/divide_item"/>
-
-    <com.sunny.youyun.views.ExpandableLineMenuItem
-        android:id="@+id/person_setting_signature"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:background="@color/light_gray"
+        android:fitsSystemWindows="true"
         android:orientation="vertical"
-        app:menu_height="@dimen/mine_item_height"
-        android:background="@color/white"
-        app:menu_title="@string/edit_signature"
-        app:menu_value_color="@color/gray"
-        app:open="true">
+        tools:context="com.sunny.youyun.activity.person_setting.PersonSettingActivity">
+
+        <include layout="@layout/bar_item" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="10dp"
+            android:padding="5dp"
+            android:text="@string/person_setting"
+            android:textColor="@color/text_gray_light"
+            android:textSize="12sp" />
 
         <include layout="@layout/divide_item" />
 
-        <EditText
-            android:id="@+id/person_setting_signature_et"
+        <com.sunny.youyun.views.LineMenuItem
+            android:id="@+id/li_change_avatar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/mine_item_height"
+            android:background="@color/white"
+            app:is_right_icon_visible="true"
+            app:left_margin="@dimen/mine_item_margin_left"
+            app:menu_title="@string/change_avatar"
+            app:menu_title_color="@color/text_gray"
+            app:menu_title_size="14sp"
+            app:right_icon_size="30dp"
+            app:right_resource="@drawable/avatar_circle_bg">
+
+        </com.sunny.youyun.views.LineMenuItem>
+
+        <include layout="@layout/divide_item" />
+
+        <com.sunny.youyun.views.LineMenuItem
+            android:id="@+id/li_change_nickname"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/mine_item_height"
+            android:background="@color/white"
+            app:left_margin="@dimen/mine_item_margin_left"
+            app:menu_title="@string/change_nickname"
+            app:menu_title_color="@color/text_gray"
+            app:menu_title_size="14sp"
+            app:menu_value="GaoSQ"/>
+
+        <include layout="@layout/divide_item" />
+
+        <com.sunny.youyun.views.ExpandableLineMenuItem
+            android:id="@+id/person_setting_signature"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/et_bg_white"
-            android:gravity="top"
-            android:hint="@string/click_it_to_edit_signature"
-            android:minHeight="100dp"
-            android:padding="10dp"
-            android:textSize="14sp" />
-        <ImageView
-            android:id="@+id/person_setting_signature_img_sure"
-            android:padding="5dp"
-            android:src="@drawable/icon_sure_circle"
-            android:layout_gravity="right"
-            android:layout_width="40dp"
-            android:layout_height="40dp" />
-    </com.sunny.youyun.views.ExpandableLineMenuItem>
+            android:background="@color/white"
+            android:orientation="vertical"
+            app:menu_height="@dimen/mine_item_height"
+            app:menu_title="@string/edit_signature"
+            app:menu_value_color="@color/gray"
+            app:open="true">
 
-</LinearLayout>
+            <include layout="@layout/divide_item" />
+
+            <EditText
+                android:id="@+id/person_setting_signature_et"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/et_bg_white"
+                android:gravity="top"
+                android:hint="@string/click_it_to_edit_signature"
+                android:minHeight="100dp"
+                android:padding="10dp"
+                android:textSize="14sp" />
+
+            <ImageView
+                android:id="@+id/person_setting_signature_img_sure"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="right"
+                android:padding="5dp"
+                android:src="@drawable/icon_sure_circle" />
+        </com.sunny.youyun.views.ExpandableLineMenuItem>
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="20dp"
+            android:padding="5dp"
+            android:text="@string/count_setting"
+            android:textColor="@color/text_gray_light"
+            android:textSize="12sp" />
+
+        <include layout="@layout/divide_item" />
+
+        <com.sunny.youyun.views.LineMenuItem
+            android:id="@+id/li_change_qq"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/mine_item_height"
+            android:background="@color/white"
+            app:left_margin="@dimen/mine_item_margin_left"
+            app:menu_title="@string/qq_count"
+            app:menu_title_color="@color/text_gray"
+            app:menu_title_size="14sp"
+            app:menu_value="1250422644"/>
+
+        <include layout="@layout/divide_item" />
+
+        <com.sunny.youyun.views.LineMenuItem
+            android:id="@+id/li_phone"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/mine_item_height"
+            android:background="@color/white"
+            app:left_margin="@dimen/mine_item_margin_left"
+            app:menu_title="@string/phone_number"
+            app:menu_title_color="@color/text_gray"
+            app:menu_title_size="14sp"
+            app:menu_value="18340857280">
+
+        </com.sunny.youyun.views.LineMenuItem>
+
+        <include layout="@layout/divide_item" />
+
+        <com.sunny.youyun.views.LineMenuItem
+            android:id="@+id/li_email"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/mine_item_height"
+            android:background="@color/white"
+            app:left_margin="@dimen/mine_item_margin_left"
+            app:menu_title="@string/email"
+            app:menu_title_color="@color/text_gray"
+            app:menu_title_size="14sp"
+            app:menu_value="1250422644@qq.com">
+
+        </com.sunny.youyun.views.LineMenuItem>
+
+        <include layout="@layout/divide_item" />
+
+        <com.sunny.youyun.views.LineMenuItem
+            android:id="@+id/li_change_password"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/mine_item_height"
+            android:background="@color/white"
+            app:left_margin="@dimen/mine_item_margin_left"
+            app:menu_title="@string/change_password"
+            app:menu_title_color="@color/text_gray"
+            app:menu_title_size="14sp">
+
+        </com.sunny.youyun.views.LineMenuItem>
+
+    </LinearLayout>
+</com.sunny.youyun.views.wheelview.widget.NestedScrollView>
